--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer build/static/js/2.fb427fb9.chunk.js"
   },
   "eslintConfig": {
     "extends": "react-app"
