--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
+    "react-native-storage": "^1.0.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
